test: incrementar cobertura de pruebas unitarias al 100% en codigo nuevo y resolver advertencias del compilador